--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.23",
     "aws-amplify": "^6.15.10",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.20.0",
     "@aws-amplify/backend-cli": "^1.8.2",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -24,12 +29,12 @@
     "@vitejs/plugin-react": "^4.2.0",
     "aws-cdk-lib": "^2.234.1",
     "constructs": "^10.4.5",
+    "esbuild": "^0.27.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "esbuild": "^0.27.2",
     "vite": "^5.0.0"
   }
 }
