--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "abcjs": "^6.6.0",
     "autoprefixer": "^10.4.23",
     "aws-amplify": "^6.15.10",
     "postcss": "^8.5.6",
