--- a/amplify/functions/transcribe-audio/package.json
+++ b/amplify/functions/transcribe-audio/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-sfn": "^3.500.0",
+    "@aws-sdk/client-dynamodb": "^3.500.0",
+    "@aws-sdk/lib-dynamodb": "^3.500.0",
     "openai": "^4.0.0",
-    "ytdl-core": "^4.11.5",
-    "aws-sdk": "^2.1691.0"
+    "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.133",
+    "typescript": "^5.3.3"
   }
 }
