--- a/amplify/functions/job-trigger/package.json
+++ b/amplify/functions/job-trigger/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@aws-sdk/client-sfn": "^3.0.0"
+    "@aws-sdk/client-sfn": "^3.500.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.0"
+    "@types/aws-lambda": "^8.10.133",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.3.3"
   }
 }
