--- a/amplify/functions/transcribe-audio/package.json
+++ b/amplify/functions/transcribe-audio/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.133",
+    "@types/node": "^20.0.0",
     "typescript": "^5.3.3"
   }
 }
