--- a/backend/functions/chord-detector-ml/Dockerfile
+++ b/backend/functions/chord-detector-ml/Dockerfile
@@ -7,27 +7,20 @@ RUN yum install -y \
     ffmpeg \
     && yum clean all
 
-# Upgrade pip first
-RUN pip install --upgrade pip
+# Upgrade pip and install wheel
+RUN pip install --upgrade pip wheel
 
 # Copy requirements
 COPY requirements.txt ${LAMBDA_TASK_ROOT}/
 
-# Install Python dependencies in stages for better caching
-# Install numpy and scipy first (they're dependencies for others)
-RUN pip install --no-cache-dir --timeout=300 numpy==1.24.3 scipy==1.11.4
-
-# Install audio processing libraries
-RUN pip install --no-cache-dir --timeout=300 librosa==0.10.1 soundfile==0.12.1
-
-# Install MIDI libraries
-RUN pip install --no-cache-dir --timeout=300 mido==1.3.2 pretty-midi==0.2.10
-
-# Install basic-pitch (largest package)
-RUN pip install --no-cache-dir --timeout=300 basic-pitch==0.3.2
-
-# Install AWS SDK
-RUN pip install --no-cache-dir boto3==1.34.34
+# Install all dependencies at once with optimizations
+# Use --prefer-binary to download pre-built wheels when available
+# Increase timeout significantly for large packages
+RUN pip install --no-cache-dir \
+    --prefer-binary \
+    --timeout=600 \
+    --retries=10 \
+    -r ${LAMBDA_TASK_ROOT}/requirements.txt
 
 # Copy function code
 COPY handler.py ${LAMBDA_TASK_ROOT}/
