--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.975.0",
+    "@aws-sdk/client-sfn": "^3.975.0",
+    "@aws-sdk/credential-providers": "^3.975.0",
+    "@aws-sdk/lib-dynamodb": "^3.975.0",
     "@heroicons/react": "^2.2.0",
     "abcjs": "^6.6.0",
     "autoprefixer": "^10.4.23",
