--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.23",
     "aws-amplify": "^6.15.10",
     "dotenv": "^17.2.3",
+    "jspdf": "^4.0.0",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
