--- a/backend/functions-v2/lyrics-transcriber/package.json
+++ b/backend/functions-v2/lyrics-transcriber/package.json
@@ -4,9 +4,10 @@
   "description": "Deepgram lyrics transcription Lambda",
   "main": "index.js",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/client-dynamodb": "^3.700.0",
+    "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "ffmpeg-static": "^5.3.0",
     "node-fetch": "^2.7.0"
   }
 }
