Add backend deployment script and exclude youtube-downloader from git

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ youtube-cookies.txt
 .env.local
 cookies.txt
 cookies (1).txt
+
+# yt-dlp library (contains example credentials that trigger GitHub security)
+backend/functions-v2/youtube-downloader/yt_dlp/
+backend/functions-v2/youtube-downloader/
