Implement RapidAPI YouTube downloader solution
- Replace yt-dlp with RapidAPI YouTube MP3 service for reliable downloads
- Add RAPIDAPI_KEY parameter to CloudFormation template
- Update deployment script to validate and pass RapidAPI key
- Create comprehensive setup guides (RAPIDAPI_SETUP.md, QUICK_START_RAPIDAPI.md)
- Update .env.example with RAPIDAPI_KEY configuration
- Remove file upload UI (keeping YouTube as primary feature)
- Add retry logic for 'processing' status from RapidAPI
- Proper error handling and logging

This solves the YouTube bot detection issue by using a paid API service.

--- a/backend/infrastructure-v2/cloudformation-ecs-architecture.yaml
+++ b/backend/infrastructure-v2/cloudformation-ecs-architecture.yaml
@@ -11,6 +11,11 @@ Parameters:
     Type: String
     NoEcho: true
   
+  RapidApiKey:
+    Type: String
+    NoEcho: true
+    Description: RapidAPI key for YouTube MP3 downloader service
+  
   ChordDetectorImageUri:
     Type: String
 
@@ -299,6 +304,7 @@ Resources:
         Variables:
           S3_AUDIO_BUCKET: !Ref AudioTempBucket
           DYNAMODB_JOBS_TABLE: !Ref JobsTable
+          RAPIDAPI_KEY: !Ref RapidApiKey
       Code:
         ZipFile: |
           def lambda_handler(event, context):
