--- a/amplify.yml
+++ b/amplify.yml
@@ -3,13 +3,15 @@ backend:
   phases:
     build:
       commands:
-        - npm ci
+        - npm ci --legacy-peer-deps
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - node --version
+        - npm --version
+        - npm ci --legacy-peer-deps
     build:
       commands:
         - npm run build
@@ -18,4 +20,5 @@ frontend:
     files:
       - '**/*'
   cache:
-    paths: []
+    paths:
+      - node_modules/**/*
