--- a/amplify.minimal.yml
+++ b/amplify.minimal.yml
@@ -5,7 +5,7 @@ frontend:
       commands:
         - node --version
         - npm --version
-        - npm install --legacy-peer-deps
+        - npm install
     build:
       commands:
         - npm run build
@@ -13,5 +13,3 @@ frontend:
     baseDirectory: dist
     files:
       - '**/*'
-  cache:
-    paths: []
