--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "aws-sdk": "^2.1693.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
