--- a/amplify.yml
+++ b/amplify.yml
@@ -1,11 +1,19 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - '# Execute Amplify CLI with the helper script'
+        - amplifyPush --simple
 frontend:
   phases:
     preBuild:
       commands:
         - node --version
         - npm --version
+        - rm -rf node_modules package-lock.json
         - npm install --legacy-peer-deps
+        - npm install @rollup/rollup-linux-x64-gnu --save-dev --legacy-peer-deps
     build:
       commands:
         - npm run build
@@ -14,4 +22,5 @@ frontend:
     files:
       - '**/*'
   cache:
-    paths: []
+    paths:
+      - node_modules/**/*
