--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "terser": "^5.46.0",
     "typescript": "^5.9.3",
-    "vite": "^5.0.0"
+    "vite": "^4.5.0"
   }
 }
